service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gateway-api-test
  name: gke-gateway-api-example
  labels:
    app: gke-gateway-api-example
spec:
  ports:
    - name: "1323-1323"
      port: 1323
      targetPort: 1323
  selector:
    app: gke-gateway-api-example
