http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gke-gateway-api-example-http-route
  namespace: gateway-api-test
spec:
  parentRefs:
  - kind: Gateway
    name: gke-gateway-api-example-gateway
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: gke-gateway-api-example
      port: 1323
